visual fixes; attempt to fix arkane on safari

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,7 @@ button, textarea, input, select, a {
 .ql-editor {
   width: 100%;
   min-height: 400px;
+  overflow-x: hidden;
 
   @apply text-base;
   font-family: 'Raleway', sans-serif;
